nvim: major changes and keymaps structure

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,42 +1,30 @@
-# improve colors
-set -g default-terminal 'screen-256color'
+# Use 256-color support
+set -g default-terminal 'xterm-256color'
 
-# Reload config
+# Reload tmux configuration
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
-# act like vim
+# Enable vi keybindings in tmux copy mode
 setw -g mode-keys vi
-#bind h select-pane -L
-#bind j select-pane -D
-#bind k select-pane -U
-#bind l select-pane -R
-#bind-key -r C-h select-window -t :-
-#bind-key -r C-l select-window -t :+
 
-# act like GNU screen
+# GNU screen style prefix
 unbind C-b
 set -g prefix `
 bind ` send-prefix
 
-# start window numbers at 1 to match keyboard order with tmux window order
+# Start window numbers at 1
 set -g base-index 1
 set-window-option -g pane-base-index 1
 
-# renumber windows sequentially after closing any of them
+# Renumber windows sequentially after closing one
 set -g renumber-windows on
 
-# increase scrollback lines
-
-# switch to last pane
+# Switch to last pane
 bind-key C-a last-pane
 
-# Status Bar ---------------------
-#
-set -g status on
-
-# soften status bar colors
-# set -g status-bg '#586e75'
-# set -g status-fg '#586ed5'
+# Catppuccin Theme for tmux
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'mocha'  # Choose your flavor: latte, frappe, macchiato, mocha
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
@@ -47,102 +35,53 @@ set-option -g status-left-length 50
 #set-option -g status-right "Battery: #{battery_icon} #{battery_percentage} #{battery_remain} | #(date '+%a, %b %d - %I:%M')"
 set-option -g status-right "#(date '+%a, %b %d - %I:%M')"
 set -g status-left "Session: #S"
+# Clear screen with C-l
+bind C-L send-keys 'C-l'
 
-# clear-screen 
-bind C-l send-keys 'C-l'
-
-# Shift + arrows to resize pane
+# Resize panes with Shift + Arrow keys
 bind -n S-Left resize-pane -L 2
 bind -n S-Right resize-pane -R 2
 bind -n S-Down resize-pane -D 1
 bind -n S-Up resize-pane -U 1
-#bind-key -n F4 kill-pane
 
+# New window in the same directory as the current pane
 bind-key c new-window -c '#{pane_current_path}'
-#bind-key k confirm kill-window
 
-#bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
-
-# --- VIM style tmux config ----
-# smart pane switching with awareness of vim splits
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-#bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-#bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-#bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-#bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-#bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
+# Enable mouse mode for pane and window selection
 set -g mouse on
-# Copy with mouse drag
-#setw -g mode-mouse on
-#set -g mouse-select-window on
 
+# Mouse scrolling in copy mode
 bind-key -T copy-mode-vi WheelUpPane send-keys -X scroll-up
 bind-key -T copy-mode-vi WheelDownPane send-keys -X scroll-down
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
-#bind-key -T edit-mode-vi Up send-keys -X history-up
-#bind-key -T edit-mode-vi Down send-keys -X history-down
-#unbind-key -T copy-mode-vi Space     ;   bind-key -T copy-mode-vi v send-keys -X begin-selection
-#unbind-key -T copy-mode-vi Enter     ;   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-#unbind-key -T copy-mode-vi C-v       ;   bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-#unbind-key -T copy-mode-vi [         ;   bind-key -T copy-mode-vi [ send-keys -X begin-selection
-#unbind-key -T copy-mode-vi ]         ;   bind-key -T copy-mode-vi ] send-keys -X copy-selection
-
-#bind-key h split-window -v -c '#{pane_current_path}'
-#bind-key v split-window -h -c '#{pane_current_path}'
-
 # Tmux plugins
-set -g @plugin 'tmux-plugins/tpm' # Tmux package manager
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-open' # Open highlighted selection directly from Tmux
-set -g @plugin 'tmux-plugins/tmux-resurrect' # Restore previous sessions on reboot
-set -g @plugin 'tmux-plugins/tmux-continuum' # Restore previous sessions on reboot
-set -g @plugin 'tmux-plugins/tmux-battery' #Show battery icon/status
-set -g @plugin 'tmux-plugins/tmux-yank' # copy paste
-set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-# set -g @plugin 'tmux-plugins/tmux-net-speed'
-# set -g @plugin 'tmux-plugins/tmux-cpu'
-# set -g @plugin 'tmux-plugins/tmux-mem'
-# set -g @plugin 'tmux-plugins/tmux-weather'
-set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'tmux-plugins/tpm'               # Tmux Plugin Manager
+set -g @plugin 'tmux-plugins/tmux-sensible'      # Sensible tmux defaults
+set -g @plugin 'tmux-plugins/tmux-open'          # Open URLs directly from tmux
+set -g @plugin 'tmux-plugins/tmux-resurrect'     # Restore tmux sessions
+set -g @plugin 'tmux-plugins/tmux-continuum'     # Auto-save and restore sessions
+set -g @plugin 'tmux-plugins/tmux-battery'       # Show battery status
+set -g @plugin 'tmux-plugins/tmux-yank'          # Copy to clipboard
+set -g @plugin 'tmux-plugins/tmux-pain-control'  # Easier pane control
+set -g @plugin 'tmux-plugins/tmux-copycat'       # Enhanced search
+set -g @plugin 'christoomey/vim-tmux-navigator'  # Seamless navigation between tmux and vim
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'omerxx/tmux-sessionx'            # Manage tmux sessions
+set -g @plugin 'niksingh710/minimal-tmux-status'
+source /usr/local/lib/python3.12/dist-packages/powerline/bindings/tmux/powerline.conf
 
-bind-key "T" run-shell "sesh connect \"$(
-	sesh list | fzf-tmux -p 55%,60% \
-		--no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
-		--header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
-		--bind 'tab:down,btab:up' \
-		--bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list)' \
-		--bind 'ctrl-t:change-prompt(  )+reload(sesh list -t)' \
-		--bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c)' \
-		--bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z)' \
-		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-		--bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
-)\""
-
-# Tmux will auto-start on system boot
+# Auto-start tmux on boot
 set -g @continuum-boot 'on'
 set -g @continuum-boot-options 'iterm'
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '5'
 set -g @resurrect-strategy-vim 'session'
-set -g @resurrect-strategy-nvim 'session' #for Neo Vim
+set -g @resurrect-strategy-nvim 'session'
 
-
-source /usr/local/lib/python3.12/dist-packages/powerline/bindings/tmux/powerline.conf
- # How to install other plugins from Github:
-# To install new plugins press: prefix + I
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
-
-set -g @yank_selection 'primary' # or 'secondary' or 'clipboard'
-set -g @shell_mode 'vi'
-
-# Use tmux buffers in combination with the system clipboard
+# Use tmux buffers with the system clipboard
 bind C-c run "tmux save-buffer - | xclip -i -selection clipboard"
 bind C-v run "tmux load-buffer - ; tmux paste-buffer"
-# Initializes Tmux plugin manager.
+
+# Initialize tmux plugin manager
 run -b '~/.tmux/plugins/tpm/tpm'
