--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,8 +15,8 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # act like GNU screen
 unbind C-b
-set -g prefix `
-bind ` send-prefix
+set -g prefix §
+bind § send-prefix
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
